--- a/config.yaml
+++ b/config.yaml
@@ -9,4 +9,4 @@ params:
 
     socialIcons:
       - name: "GitHub"
-        url: "https://github.com/phish-dev"
+        url: "https://github.com/phish-dev/site"
